--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-browsertab": "^0.2.0",
+        "cordova-plugin-buildinfo": "~2.0.1",
         "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-customurlscheme": "^4.3.0",
         "cordova-plugin-device": "^1.1.4",
@@ -49,6 +50,7 @@
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "plugman": "^2.0.0",
         "promise-polyfill": "^7.1.0",
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
