--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "@angular/platform-browser-dynamic": "4.4.3",
         "@ionic-native/core": "4.3.0",
         "@ionic-native/file": "^4.5.2",
-        "@ionic-native/file-opener": "^4.5.2",
+        "@ionic-native/file-opener": "^4.5.3",
+        "@ionic-native/file-path": "^4.5.3",
         "@ionic-native/google-plus": "^4.5.3",
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "4.3.0",
