--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@angular/http": "4.4.3",
         "@angular/platform-browser": "4.4.3",
         "@angular/platform-browser-dynamic": "4.4.3",
-        "@ionic-native/core": "4.3.0",
+        "@ionic-native/core": "^4.5.3",
         "@ionic-native/file": "^4.5.2",
         "@ionic-native/file-opener": "^4.5.3",
         "@ionic-native/file-path": "^4.5.3",
