--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@ionic-native/file-opener": "^4.5.3",
         "@ionic-native/file-path": "^4.5.3",
         "@ionic-native/google-plus": "^4.5.3",
+        "@ionic-native/phonegap-local-notification": "^4.7.0",
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "4.3.0",
         "@ionic/storage": "^2.0.1",
@@ -51,6 +52,7 @@
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "phonegap-plugin-local-notification": "^1.0.1",
         "plugman": "^2.0.0",
         "promise-polyfill": "^7.1.0",
         "rxjs": "5.4.3",
@@ -91,7 +93,8 @@
                 "ANDROID_SCHEME": " ",
                 "ANDROID_HOST": " ",
                 "ANDROID_PATHPREFIX": "/"
-            }
+            },
+            "phonegap-plugin-local-notification": {}
         }
     }
 }
