--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>1005667092717-gumimataigu5kn5ji6cpdif8cgeua2f3.apps.googleusercontent.com</string>
+	<string>1005667092717-9geuk1e3ocrtob9mfu2tbd68emobe0ud.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1005667092717-gumimataigu5kn5ji6cpdif8cgeua2f3</string>
+	<string>com.googleusercontent.apps.1005667092717-9geuk1e3ocrtob9mfu2tbd68emobe0ud</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCHK8CA6baRgdDh4cAoZpI1VuoL6kNreL8</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>io.ionic.agriexpense</string>
+	<string>uwi.dcit.AgriExpenseTT</string>
 	<key>PROJECT_ID</key>
 	<string>uwi-agriexpense</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1005667092717:ios:ee227acf83264321</string>
+	<string>1:1005667092717:ios:8a92be1f808c8e1d</string>
 	<key>DATABASE_URL</key>
 	<string>https://uwi-agriexpense.firebaseio.com</string>
 </dict>
