--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "@ionic-native/file": "^4.5.2",
         "@ionic-native/file-opener": "^4.5.3",
         "@ionic-native/file-path": "^4.5.3",
-        "@ionic-native/google-plus": "^4.5.3",
+        "@ionic-native/google-plus": "^4.7.0",
         "@ionic-native/phonegap-local-notification": "^4.7.0",
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "4.3.0",
@@ -49,6 +49,7 @@
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-universal-links-plugin": "^1.2.1",
         "firebase": "^4.9.1",
+        "intl": "^1.2.5",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -82,7 +83,7 @@
             "cordova-plugin-file": {},
             "cordova-plugin-file-opener2": {},
             "cordova-plugin-googleplus": {
-                "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1005667092717-gumimataigu5kn5ji6cpdif8cgeua2f3"
+                "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1005667092717-9geuk1e3ocrtob9mfu2tbd68emobe0ud"
             },
             "cordova-plugin-buildinfo": {},
             "cordova-universal-links-plugin": {},
