--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/file-path": "^4.5.3",
         "@ionic-native/google-plus": "^4.7.0",
         "@ionic-native/phonegap-local-notification": "^4.7.0",
+        "@ionic-native/social-sharing": "^4.7.0",
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "4.3.0",
         "@ionic/storage": "^2.0.1",
@@ -47,7 +48,9 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-x-socialsharing": "^5.4.0",
         "cordova-universal-links-plugin": "^1.2.1",
+        "es6-promise-plugin": "^4.2.2",
         "firebase": "^4.9.1",
         "intl": "^1.2.5",
         "ionic-angular": "3.7.1",
@@ -95,7 +98,8 @@
                 "ANDROID_HOST": " ",
                 "ANDROID_PATHPREFIX": "/"
             },
-            "phonegap-plugin-local-notification": {}
+            "phonegap-plugin-local-notification": {},
+            "cordova-plugin-x-socialsharing": {}
         }
     }
 }
