--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@ionic-native/file-opener": "^4.5.3",
         "@ionic-native/file-path": "^4.5.3",
         "@ionic-native/google-plus": "^4.7.0",
+        "@ionic-native/local-notifications": "^4.7.0",
         "@ionic-native/phonegap-local-notification": "^4.7.0",
         "@ionic-native/social-sharing": "^4.7.0",
         "@ionic-native/splash-screen": "4.3.0",
@@ -32,9 +33,11 @@
         "@ionic/storage": "^2.0.1",
         "angular2-uuid": "^1.1.1",
         "angularfire2": "^5.0.0-rc.6",
-        "cordova-android": "^6.2.3",
+        "cordova-android": "^6.3.0",
+        "cordova-android-support-gradle-release": "^1.4.3",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-badge": "^0.8.7",
         "cordova-plugin-browsertab": "^0.2.0",
         "cordova-plugin-buildinfo": "~2.0.1",
         "cordova-plugin-compat": "^1.2.0",
@@ -45,6 +48,7 @@
         "cordova-plugin-googleplus": "^5.2.1",
         "cordova-plugin-inappbrowser": "^2.0.2",
         "cordova-plugin-ionic-webview": "^1.1.15",
+        "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -56,11 +60,13 @@
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "moment": "^2.22.2",
         "phonegap-plugin-local-notification": "^1.0.1",
         "plugman": "^2.0.0",
         "promise-polyfill": "^7.1.0",
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
+        "typescript": "^2.4.2",
         "uuid-js": "^0.7.5",
         "xlsx": "^0.11.18",
         "zone.js": "0.8.18"
@@ -99,7 +105,11 @@
                 "ANDROID_PATHPREFIX": "/"
             },
             "phonegap-plugin-local-notification": {},
-            "cordova-plugin-x-socialsharing": {}
+            "cordova-plugin-x-socialsharing": {},
+            "cordova-android-support-gradle-release": {
+                "ANDROID_SUPPORT_VERSION": "27.+"
+            },
+            "cordova-plugin-local-notification": {}
         }
     }
 }
