--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@ionic-native/status-bar": "4.3.0",
         "@ionic/storage": "^2.0.1",
         "angular2-uuid": "^1.1.1",
-        "angularfire2": "^5.0.0-rc.6",
+        "angularfire2": "5.0.0-rc.6",
         "cordova-android": "^6.3.0",
         "cordova-android-support-gradle-release": "^1.4.3",
         "cordova-browser": "^4.1.0",
@@ -57,12 +57,14 @@
         "cordova-plugin-x-socialsharing": "^5.4.0",
         "cordova-universal-links-plugin": "^1.2.1",
         "es6-promise-plugin": "^4.2.2",
-        "firebase": "^4.9.1",
+        "firebase": "4.9.1",
         "intl": "^1.2.5",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "moment": "^2.22.2",
+        "nan": "git+https://github.com/nodejs/nan.git",
+        "node-sass": "4.9.3",
         "phonegap-plugin-local-notification": "^1.0.1",
         "plugman": "^2.0.0",
         "promise-polyfill": "^7.1.0",
