--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "AgriExpense",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
+    "name": "agriexpense",
+    "version": "0.1.0",
+    "author": "UWI DCIT",
+    "homepage": "https://sta.uwi.edu/rdifund/projects/agrinett/",
     "private": true,
     "scripts": {
         "clean": "ionic-app-scripts clean",
@@ -34,27 +34,27 @@
         "@ionic/storage": "^2.0.1",
         "angular2-uuid": "^1.1.1",
         "angularfire2": "5.0.0-rc.6",
-        "cordova-android": "^6.3.0",
-        "cordova-android-support-gradle-release": "^1.4.3",
+        "cordova-android": "6.4.0",
+        "cordova-android-support-gradle-release": "^1.4.4",
         "cordova-browser": "^4.1.0",
-        "cordova-ios": "^4.4.0",
+        "cordova-ios": "^4.5.5",
         "cordova-plugin-badge": "^0.8.7",
         "cordova-plugin-browsertab": "^0.2.0",
-        "cordova-plugin-buildinfo": "~2.0.1",
+        "cordova-plugin-buildinfo": "^2.0.2",
         "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-customurlscheme": "^4.3.0",
-        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-device": "^1.1.7",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-file-opener2": "^2.0.19",
         "cordova-plugin-firebase": "^1.0.5",
-        "cordova-plugin-googleplus": "^5.2.1",
+        "cordova-plugin-googleplus": "^5.3.0",
         "cordova-plugin-inappbrowser": "^2.0.2",
-        "cordova-plugin-ionic-webview": "^1.1.15",
+        "cordova-plugin-ionic-webview": "^1.2.1",
         "cordova-plugin-local-notification": "^0.9.0-beta.2",
-        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-splashscreen": "^4.1.0",
         "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-plugin-x-socialsharing": "^5.4.0",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-x-socialsharing": "^5.4.1",
         "cordova-universal-links-plugin": "^1.2.1",
         "es6-promise-plugin": "^4.2.2",
         "firebase": "4.9.1",
@@ -77,9 +77,10 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.0.0",
-        "typescript": "2.3.4"
+        "@ionic/lab": "1.0.6",
+        "typescript": "2.9.2"
     },
-    "description": "An Ionic project",
+    "description": "The AgriExpense mobile application was developed to assist farmers to keep records of the operational cost of each crop cycle, by recording the crop expenses on the go and monitoring cost of production per unit harvested",
     "cordova": {
         "platforms": [
             "android",
