--- a/package.json
+++ b/package.json
@@ -1,121 +1,123 @@
 {
-    "name": "agriexpense",
-    "version": "0.1.0",
-    "author": "UWI DCIT",
-    "homepage": "https://sta.uwi.edu/rdifund/projects/agrinett/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
-    },
-    "dependencies": {
-        "@angular/common": "4.4.3",
-        "@angular/compiler": "4.4.3",
-        "@angular/compiler-cli": "4.4.3",
-        "@angular/core": "4.4.3",
-        "@angular/forms": "4.4.3",
-        "@angular/http": "4.4.3",
-        "@angular/platform-browser": "4.4.3",
-        "@angular/platform-browser-dynamic": "4.4.3",
-        "@ionic-native/core": "^4.5.3",
-        "@ionic-native/file": "^4.5.2",
-        "@ionic-native/file-opener": "^4.5.3",
-        "@ionic-native/file-path": "^4.5.3",
-        "@ionic-native/firebase": "^4.8.0",
-        "@ionic-native/google-plus": "^4.7.0",
-        "@ionic-native/local-notifications": "^4.7.0",
-        "@ionic-native/phonegap-local-notification": "^4.7.0",
-        "@ionic-native/social-sharing": "^4.7.0",
-        "@ionic-native/splash-screen": "4.3.0",
-        "@ionic-native/status-bar": "4.3.0",
-        "@ionic/storage": "^2.0.1",
-        "angular2-uuid": "^1.1.1",
-        "angularfire2": "5.0.0-rc.6",
-        "cordova-android": "6.4.0",
-        "cordova-android-support-gradle-release": "^1.4.4",
-        "cordova-browser": "^4.1.0",
-        "cordova-ios": "^4.5.5",
-        "cordova-plugin-badge": "^0.8.7",
-        "cordova-plugin-browsertab": "^0.2.0",
-        "cordova-plugin-buildinfo": "^2.0.2",
-        "cordova-plugin-compat": "^1.2.0",
-        "cordova-plugin-customurlscheme": "^4.3.0",
-        "cordova-plugin-device": "^1.1.7",
-        "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-file-opener2": "^2.0.19",
-        "cordova-plugin-firebase": "^1.0.5",
-        "cordova-plugin-googleplus": "^5.3.0",
-        "cordova-plugin-inappbrowser": "^2.0.2",
-        "cordova-plugin-ionic-webview": "^1.2.1",
-        "cordova-plugin-local-notification": "^0.9.0-beta.2",
-        "cordova-plugin-splashscreen": "^4.1.0",
-        "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-plugin-x-socialsharing": "^5.4.1",
-        "cordova-universal-links-plugin": "^1.2.1",
-        "es6-promise-plugin": "^4.2.2",
-        "firebase": "4.9.1",
-        "intl": "^1.2.5",
-        "ionic-angular": "3.7.1",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "moment": "^2.22.2",
-        "nan": "git+https://github.com/nodejs/nan.git",
-        "node-sass": "4.9.3",
-        "phonegap-plugin-local-notification": "^1.0.1",
-        "plugman": "^2.0.0",
-        "promise-polyfill": "^7.1.0",
-        "rxjs": "5.4.3",
-        "sw-toolbox": "3.6.0",
-        "typescript": "^2.4.2",
-        "uuid-js": "^0.7.5",
-        "xlsx": "^0.11.18",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "3.0.0",
-        "@ionic/lab": "1.0.6",
-        "typescript": "2.9.2"
-    },
-    "description": "The AgriExpense mobile application was developed to assist farmers to keep records of the operational cost of each crop cycle, by recording the crop expenses on the go and monitoring cost of production per unit harvested",
-    "cordova": {
-        "platforms": [
-            "android",
-            "browser",
-            "ios"
-        ],
-        "plugins": {
-            "cordova-plugin-device": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-file": {},
-            "cordova-plugin-file-opener2": {},
-            "cordova-plugin-googleplus": {
-                "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1005667092717-9geuk1e3ocrtob9mfu2tbd68emobe0ud"
-            },
-            "cordova-plugin-buildinfo": {},
-            "cordova-universal-links-plugin": {},
-            "cordova-plugin-browsertab": {},
-            "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-customurlscheme": {
-                "URL_SCHEME": "io.ionic.agriexpense",
-                "ANDROID_SCHEME": " ",
-                "ANDROID_HOST": " ",
-                "ANDROID_PATHPREFIX": "/"
-            },
-            "phonegap-plugin-local-notification": {},
-            "cordova-plugin-x-socialsharing": {},
-            "cordova-android-support-gradle-release": {
-                "ANDROID_SUPPORT_VERSION": "27.+"
-            },
-            "cordova-plugin-local-notification": {},
-            "cordova-plugin-firebase": {}
-        }
+  "name": "agriexpense",
+  "version": "0.1.0",
+  "author": "UWI DCIT",
+  "homepage": "https://sta.uwi.edu/rdifund/projects/agrinett/",
+  "private": true,
+  "scripts": {
+    "start": "ionic-app-scripts serve",
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/animations": "5.2.11",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/core": "~4.11.0",
+    "@ionic-native/file": "^4.11.0",
+    "@ionic-native/file-opener": "^4.11.0",
+    "@ionic-native/file-path": "^4.11.0",
+    "@ionic-native/firebase": "^4.11.0",
+    "@ionic-native/google-plus": "^4.11.0",
+    "@ionic-native/local-notifications": "^4.11.0",
+    "@ionic-native/phonegap-local-notification": "^4.11.0",
+    "@ionic-native/social-sharing": "^4.11.0",
+    "@ionic-native/splash-screen": "4.11.0",
+    "@ionic-native/status-bar": "4.11.0",
+    "@ionic/storage": "2.1.3",
+    "angular2-uuid": "^1.1.1",
+    "angularfire2": "5.0.0-rc.6",
+    "cordova-android": "6.4.0",
+    "cordova-android-support-gradle-release": "^1.4.4",
+    "cordova-browser": "^4.1.0",
+    "cordova-ios": "^4.5.5",
+    "cordova-plugin-badge": "^0.8.7",
+    "cordova-plugin-browsertab": "^0.2.0",
+    "cordova-plugin-buildinfo": "^2.0.2",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-customurlscheme": "^4.3.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-file-opener2": "^2.0.19",
+    "cordova-plugin-firebase": "^1.0.5",
+    "cordova-plugin-googleplus": "^5.3.0",
+    "cordova-plugin-inappbrowser": "^2.0.2",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.1",
+    "cordova-universal-links-plugin": "^1.2.1",
+    "es6-promise-plugin": "^4.2.2",
+    "firebase": "4.9.1",
+    "intl": "^1.2.5",
+    "ionic-angular": "^3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "moment": "^2.22.2",
+    "nan": "git+https://github.com/nodejs/nan.git",
+    "node-sass": "4.9.3",
+    "phonegap-plugin-local-notification": "^1.0.1",
+    "plugman": "^2.0.0",
+    "promise-polyfill": "^7.1.0",
+    "rxjs": "^5.5.11",
+    "sw-toolbox": "3.6.0",
+    "typescript": "^2.4.2",
+    "uuid-js": "^0.7.5",
+    "xlsx": "^0.13.3",
+    "zone.js": "^0.8.26"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.1.11",
+    "@ionic/lab": "1.0.6",
+    "typescript": "2.9.2"
+  },
+  "description": "The AgriExpense mobile application was developed to assist farmers to keep records of the operational cost of each crop cycle, by recording the crop expenses on the go and monitoring cost of production per unit harvested",
+  "cordova": {
+    "platforms": [
+      "android",
+      "browser",
+      "ios"
+    ],
+    "plugins": {
+      "cordova-plugin-device": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-opener2": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1005667092717-9geuk1e3ocrtob9mfu2tbd68emobe0ud"
+      },
+      "cordova-plugin-buildinfo": {},
+      "cordova-universal-links-plugin": {},
+      "cordova-plugin-browsertab": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "io.ionic.agriexpense",
+        "ANDROID_SCHEME": " ",
+        "ANDROID_HOST": " ",
+        "ANDROID_PATHPREFIX": "/"
+      },
+      "phonegap-plugin-local-notification": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      },
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-firebase": {}
     }
+  }
 }
