--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "cordova-android": "6.4.0",
     "cordova-android-support-gradle-release": "^1.4.4",
     "cordova-browser": "^4.1.0",
-    "cordova-ios": "^4.5.5",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-browsertab": "^0.2.0",
     "cordova-plugin-buildinfo": "^2.0.2",
